Fixed bug where Input got too big Issue #31 Task #35

--- a/client/src/components/formInput/FormInput.css
+++ b/client/src/components/formInput/FormInput.css
@@ -48,4 +48,5 @@
     color: red;
     display: none;
     margin-bottom: 8px;
+    max-width: 256px;
 }
